--- a/Photo.html
+++ b/Photo.html
@@ -11,7 +11,7 @@
 					  <li><a href="index.html">Home </a></li>
 					  <li><a href="band.html">Band	</a></li>
 					  <li><a href="photo.html">Photo </a></li>
-					  <li><a href="booking.html">Bookings</a></li>
+					  <li><a href="Signup.html">Bookings</a></li>
 					</ul>
 			  </div>
 		<h1> <center> Albums </center></h1>
