--- a/index.html
+++ b/index.html
@@ -3,58 +3,32 @@
     
 <title> The Monkees - Home Page  </title>
 
-<link rel="stylesheet" href="static/css/styles.css">
+<link rel="stylesheet" href="static/css/style2.css">
  <script type="text/javascript" src="bower_components/angular/angular.js"></script>
     <script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 
 </head>
-<body >
-
- 
- <nav class = "navBar">
+<body>
 	<div class = "navBar">
     <ul>
-      <li> <a href="index.html">Home </a></li>
+      <li> <a href="index.html"> The Monkees </a></li>
       <li><a href="band.html">Band	</a></li>
       <li><a href="photo.html">Photo </a></li>
-      <li><a href="signup.html"> Bookings</a></li>
+      <li><a href="Signup.html">Bookings</a></li>
       
   </div>
-</nav>
-   <div class = "float">
-   
-				<img src="static/images/head4.jpg" style = "width: 100px; height: 80px;" >
-				<img src="static/images/head.jpg" style = "width: 100px; height: 80px;" > 
-				<img src="static/images/head3.jpg" style = "width: 100px; height: 80px;" >
-				<img src="static/images/head2.jpg" style = "width: 100px; height: 80px;" >
-      </div> 
-<h1> The Monkees</h1>
+		<h1><center> History </center> </h1>
 
-	<p> The Monkees are an American-British pop rock band originally active between 1965 and 1971, with subsequent reunion albums and tours in the decades that followed.</P>
-
-	<img src = "static/images/band.jpg" style="float:left; width:304px;height:228px; ">
-
+	<div class ="gallery2">
 	<p style ="position:right;">The band formed in 1965 in Los Angelse by Bob Rafelson and Schnider. The Monkees aried only for four years between 1966 to 1968. The four young singers were Peter Tork, Micky Dolnez, Davey Jones and Michael Nesmith, who all can be seen below. ter Tork - Peter Tork, was known as Peter Halsten Thorkelson, born on the 13 February 1942. He is an American musician and actor, best known as the keyboardist and bass guitarist of the Monkees. 
-Davy Jones - David Thomas, was knwon as Davy Jones and was born on the 30 December 1945. For the band he was was singer-songwriter, musician, actor, but most famous for starring in the TV series of the same name. 
-Michael Nesmith - Robert Michael Nesmith, known as Michael Nesmith. He was born 30 December 1942. He is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, but best known as a member of the pop rock band the Monkees. 
-Micky Dolenz - George Michael, known as Micky Dolenz was born on the 8th March 1945. He was an American actor, musician, and theater director, but best known as a vocalist and drummer of the 1960s pop/rock band the Monkees. 
-	<nav>
-	<div>
-	<h2> Gigs 2017!</h2>
-	
-	<ul >
-	<li> London - 24th April 2017 / 31st March 2017 </li>
-	<li> Paris  - 30th May 2017 / 1st June 2017 </li>
-	<li> Dublin - 8th October 2017 / 10th October 2017 </li>
-
-	</ul>
-		 <p> Call 0888 08080 0880 - To book tickets </p>
+		Davy Jones - David Thomas, was knwon as Davy Jones and was born on the 30 December 1945. For the band he was was singer-songwriter, musician, actor, but most famous for starring in the TV series of the same name. 
+		Michael Nesmith - Robert Michael Nesmith, known as Michael Nesmith. He was born 30 December 1942. He is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, but best known as a member of the pop rock band the Monkees. 
+		Micky Dolenz - George Michael, known as Micky Dolenz was born on the 8th March 1945. He was an American actor, musician, and theater director, but best known as a vocalist and drummer of the 1960s pop/rock band the Monkees. 
+	</p>
+	<img src = "static/images/monkees.jpg" hspace="20"> 
+	<p>The Monkees are an American/English rock and pop band originally active between 1965 and 1971, with subsequent reunion albums and tours in the decades that followed. They were formed in Los Angeles in 1965 by Bob Rafelson and Bert Schneider for the American television series The Monkees, which aired from 1966 to 1968. The musical acting quartet was composed of Americans Micky Dolenz, Michael Nesmith and Peter Tork and British stage and television actor and singer Davy Jones. The band's music was initially supervised by producer Don Kirshner, backed by the songwriting duo of Tommy Boyce and Bobby Hart</p>
 	</div>
-	</nav>
-	
-	
 
-		<script src="Scripts/angular.min.js"></script>
 	<body>
 
 </html>
