--- a/Band.html
+++ b/Band.html
@@ -1,42 +1,73 @@
 <html data-ng-app="">
 		<head>
 			<title> The Monkees - Home Page  </title>
-				<link rel="stylesheet" href="static/css/styles.css">
+				<link rel="stylesheet" href="static/css/style2.css">
 					<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 					<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 		</head>
 	<body >
 			<div class = "navBar">
 			<ul>
-				  <li><a href="index.html">Home </a></li>
+				  <li><a href="index.html"> The Monkees </a></li>
 				  <li><a href="band.html">Band	</a></li>
 				  <li><a href="photo.html">Photo </a></li>
-				  <li><a href="booking.html"> Bookings</a></li>  
+				  <li><a href="Signup.html"> Bookings</a></li>  
 			</ul>
-		  </div>
-		<div class = "float">
-			<img src="static/images/head4.jpg" width = "100" height = "100">
-			<img src="static/images/head.jpg" width = "100" height = "100"> 
-			<img src="static/images/head3.jpg" width = "100" height = "100">
-			<img src="static/images/head2.jpg" width = "100" height = "100">
-		</div>
-				<div data-ng-init="customers = [{name:'Peter Tork' , info:'Peter Tork, was known as Peter Halsten Thorkelson, born on the 13 February  1942. He is an American musician and actor, best known as the keyboardist and bass guitarist of the Monkees.'},  
-					{name:' Davy Jones', info:'David Thomas, was knwon as Davy Jones and was born on the 30 December 1945. For the band he was was singer-songwriter, musician, actor, but most famous for starring in the TV series of the same name.'}, 
-					{name:' Michael Nesmith' , info:'Robert Michael Nesmith, known as Michael Nesmith. He was born 30 December 1942. He is an American musician, songwriter, actor, producer, novelist, businessman, and philanthropist, but  best known as a member of the pop rock band the Monkees.'}, 
-					{name:' Micky Dolenz', info:'George Michael, known as Micky Dolenz was born on the 8th March 1945. He was an American actor, musician, and theater director, but best known as a vocalist and drummer of the 1960s pop/rock band the Monkees.'}]">
-						<p>Band Memebers Name: (Peter Tork, Davy Jones, Micky Dolenz or Michael Nesmith)</p> 
-							<input type = "text" data-ng-model="name" /> 
-								<br/>
-									<ul>
-										<li data-ng-repeat="cust in customers | filter:name" >{{cust.name}} - {{cust.info}} <br/> </li>
-									</ul>
+			</div>
+				<h1> <center>Members <Center></h1>
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/Head.jpg">
+      						<img src="static/images/Head.jpg">
+    					</a>				
+						<div class="desc">
+						<ul style="list-style-type:none">
+  							<li>Name: David Thomas Jones</li>
+  							<li>Born: 30 December 1945</li>
+                                                </ul>
+						</div>
+				</div>					
+			</div>
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/head2.jpg">
+      						<img src="static/images/head2.jpg">
+    					</a>
+						<div class="desc">
+						<ul style="list-style-type:none">
+  							<li>Name: George Michael Dolenz</li>
+  							<li>Born: 8 March 1945</li>
+                                                </ul>
+						</div>
+				</div>			
+			</div>
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/head3.jpg">
+      						<img src="static/images/head3.jpg">
+    					</a>
+						<div class="desc">
+						<ul style="list-style-type:none">
+  							<li>Name: Robert Michael Nesmith</li>
+  							<li>Born: 30 December 1942 </li>
+                                                </ul>
+						</div>
 				</div>
-					<br/>		 
-					<h1> The Monkees - First Video</h1>
-					<h2> The first of many videos, the first single.<h2>
-						<video width="320" height="240">
-						  <source src="static/audio/TheMonkees.mp4" type="video/mp4">
-						  <source src="static/audio/TheMonkees.ogg" type="video/ogg">
-						</video>
+			</div>
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/head4.jpg">
+      						<img src="static/images/head4.jpg">
+    					</a>
+						<div class="desc">
+						<ul style="list-style-type:none">
+  							<li>Name: Peter Halsten Tork</li>
+  							<li>Born: 13 February 1942</li>
+                                                </ul>
+						</div>
+				</div>
+			</div>
+	
+			
 	</body>
 </html>
