--- a/Photo.html
+++ b/Photo.html
@@ -1,88 +1,59 @@
 <html ng-app="">
 	<head>
 		<title> The Monkees - Home Page  </title>
-			<link rel="stylesheet" href="static/css/styles.css">
+			<link rel="stylesheet" href="static/css/style2.css">
 				<script type="text/javascript" src="bower_components/angular/angular.js"></script>
 				<script type="text/javascript" src="bower_components/angular-route/angular-route.js"></script>
 	</head>
 		<body>
 				<div class = "navBar">
 					<ul>
-					  <li><a href="index.html">Home </a></li>
+					  <li><a href="index.html"> The Monkees </a></li>
 					  <li><a href="band.html">Band	</a></li>
 					  <li><a href="photo.html">Photo </a></li>
 					  <li><a href="Signup.html">Bookings</a></li>
 					</ul>
 			  </div>
 		<h1> <center> Albums </center></h1>
-			 <div id="content" class ="box"> 
-				<div class="row">
-					  <div class="col-md-3">
-						<div class="thumbnail">
-						  <a href="static/images/cover.jpg">
-							<img src="static/images/cover.jpg" alt="The Best of The Monkees" style="width:250px; height:250px;">
-								<div class="caption">
-								  <p>The Best of The Monkees</p>
-								</div>
-						  </a>
-						</div>
-					  </div>
-					<div class="col-md-3">
-						<div class="thumbnail">
-						  <a href="static/images/cover2.jpg">
-							<img src="static/images/cover2.jpg" alt="Good Times!" style="width:250px; height:250px;">
-								<div class="caption">
-								  <p>Good Times!</p>
-								</div>
-						  </a>
-						</div>
-					</div>
-						<div class="col-md-3">
-							<div class="thumbnail">
-							  <a href="static/images/cover1.jpg">
-								<img src="static/images/cover1.jpg" alt="Head" style="width:250px; height:250px;">
-									<div class="caption">
-									  <p>Head</p>
-									</div>
-							  </a>
-							</div>
-						</div>
-					</div>
+			<div class="responsive">
+  				<div class="gallery">
+    					<a target="_blank" href="static/images/album.jpg">
+      					<img src="static/images/album.jpg">
+    					</a>
+    				<div class="desc">More Great Hits</div>
+  				</div>
 			</div>
-		  <h1> <center> Upcoming Albums </center></h1> <br>
-			 <div id="content" class ="box"> 
-				<div class="row">
-				  <div class="col-md-3">
-					<div class="thumbnail">
-					  <a href="static/images/cover.jpg">
-						<img src="static/images/album.jpg" alt="Monkees 1970" style="width:250px; height:250px;">
-							<div class="caption">
-							  <p>The Late Monkees 1970</p>
-							</div>
-					  </a>
-					</div>
-				  </div>
-					<div class="col-md-3">
-						<div class="thumbnail">
-							<a href="static/images/album2.jpg">
-								<img src="static/images/album2.jpg" alt="1960's" style="width:250px; height:250px;">
-									<div class="caption">
-									  <p>Bring the 60s back!</p>
-									</div>
-							</a>
-						</div>
-					</div>
-					  <div class="col-md-3">
-						<div class="thumbnail">
-						  <a href="static/images/cover3.jpg">
-							<img src="static/images/cover3.jpg" alt="London" style="width:250px; height:250px;">
-								<div class="caption">
-								  <p>London, Baby</p>
-								</div>
-						  </a>
-						</div>
-					  </div>		  
-				  </div>
+
+
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/album2.jpg">
+      					<img src="static/images/album2.jpg">
+    					</a>
+    				<div class="desc">The Very Best</div>
+  				</div>
+			</div>
+
+			<div class="responsive">
+ 				<div class="gallery">
+    					<a target="_blank" href="static/images/band.jpg">
+      						<img src="static/images/band.jpg">
+    					</a>
+    					<div class="desc">New Brand</div>
+  					</div>
 				</div>
+
+			<div class="responsive">
+  				<div class="gallery">
+    					<a target="_blank" href="static/images/cover.jpg">
+      						<img src="static/images/cover.jpg">
+    					</a>
+    				<div class="desc">Greatest Hits</div>
+  				</div>
+			</div>
+
+			<div class="clearfix"></div>
+
+
 	</body>
 </html> 
